# bootimage

./: .gitignore  Dockerfile  README  README.centos6  README.md  README.mkl_acml  breakin.files  breakin.modules  build-img.sh  build-rh5-rpm.sh  build.sh  configure.in  devfiles.tgz  findso.pl  functions  grub.cfg  init  initrd-src-01-10-2008.tgz  initrd.template  iso.template  make_new_initrd  make_new_initrd.old  make_src  mce.sh  mkinitfs.conf
.github/workflows/: build.yml
initrd-src-01-10-2008/etc/: hardware_output.sh  modules_other.conf  nsswitch.conf  passwd  profile  resumescreen  screenrc  shells
initrd-src-05-20-2008-jnp/etc/: fstab  group  hardware.sh  (+5 more)
patches/: Make.Linux_AMD_32  Make.Linux_AMD_32_Goto  Make.Linux_AMD_64  Make.Linux_AMD_64_Goto  Make.Linux_Intel_32  Make.Linux_Intel_32_Goto  Make.Linux_Intel_64  Make.Linux_Intel_64_Goto  busybox.config  config-3.10.0-327.36.3.el7.x86_64  ioremap.kernel-3.18.patch  kernel-3.19.x86_64.config  kernel.3.16.x86_64.config  kernel.3.18.x86_64.config  kernel.3.x86_64.config  kernel.4.1.x86_64.config  kernel.4.4.x86_64.config  kernel.old.x86_64.config  kernel.x86.config  kernel.x86_64.config  udev-md-device.rules
src/: make_modules
srcctrl/: .template  actdmi  afio  amiflashdrv  arecacli  bonnie++  breakin  btrfsprogs  busybox  devfiles  dmidecode  dropbear  e2fsprogs  edac-utils  ethtool  hddtemp  hdparm  hpl  htop  initfs  inteltools  ipmitool  kernel  links  linux-firmware  lm-sensors  lvm2  mcelog  mdadm  mdinfo  mstflint  numactl  nvme-cli  parted  pciutils  rsync  screen  smartmontools  stream  syslinux  (+9 more)
(+27 files in other folders)
