VERSION='4.26.2'
export VERSION
ARCH='x86_64'
export ARCH
#USEGOTO="yes"
#export USEGOTO

# Path to the compiler and library path you need to build HPL
# this is done because newer ACML will not link with gnu compilers installed
# by RedHat 6.X series.
#
# HPL_CC=gcc
# HPL_CXX=g++
# HPL_FC=gfortran
# HPL_LD_LIBRARY_PATH=

HPL_LD_LIBRARY_PATH=/act/gcc-4.9.2/lib64
HPL_CC=/act/gcc-4.9.2/bin/gcc
HPL_FC=/act/gcc-4.9.2/bin/gfortran
HPL_F77=/act/gcc-4.9.2/bin/gfortran
HPL_F90=/act/gcc-4.9.2/bin/gfortran
HPL_CXX=/act/gcc-4.9.2/bin/g++

export HPL_CC HPL_F90 HPL_F77 HPL_FC HPL_CXX HPL_LD_LIBRARY_PATH
