VERSION='4.31.0.el7'
export VERSION
ARCH='x86_64'
export ARCH
DISABLEAMD=1
export DISABLEAMD
#USEGOTO="yes"
#export USEGOTO

# Path to the compiler and library path you need to build HPL
# this is done because newer ACML will not link with gnu compilers installed
# by RedHat 6.X series.
#
# HPL_CC=gcc
# HPL_CXX=g++
# HPL_FC=gfortran
# HPL_LD_LIBRARY_PATH=

HPL_LD_LIBRARY_PATH=""
HPL_CC=gcc
HPL_FC=gfortran
HPL_F77=gfortran
HPL_F90=gfortran
HPL_CXX=g++

# Set the kernel globally, so dependent utilities (like amiflash) can reference
# it without having to remember to change a bunch of files

#KERNELVER=""
KERNELVER=`uname -r`

export HPL_CC HPL_F90 HPL_F77 HPL_FC HPL_CXX HPL_LD_LIBRARY_PATH KERNELVER
